--- a/src/main/resources/templates/base.vm
+++ b/src/main/resources/templates/base.vm
@@ -62,6 +62,7 @@
 			$!{_inlineCSS}
 		</style>
 		#end
+		<script nonce="$cspNonce" src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
 	<body>
 		<div class="scoold-wrapper">
@@ -194,7 +195,7 @@
 
 							<div class="brand-logo">
 								<a href="$!{CONTEXT_PATH}/">
-									<img src="$logoUrl" class="scoold-logo" width="$logoWidth" alt="scoold logo">
+									MEC knowledge sharing platform
 								</a>
 							</div>
 
@@ -361,6 +362,20 @@
 			</main>
 
 			<footer class="page-footer">
+				<div id="google-ads">
+					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7244927580796954"
+						 crossorigin="anonymous"></script>
+					<!-- default -->
+					<ins class="adsbygoogle"
+						 style="display:block"
+						 data-ad-client="ca-pub-7244927580796954"
+						 data-ad-slot="3484577101"
+						 data-ad-format="auto"
+						 data-full-width-responsive="true"></ins>
+					<script>
+						 (adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
 				<div class="container">
 					<div class="row mbn">
 						<div class="col l7 s12 sTextCenter">
@@ -456,6 +471,10 @@
 		#if ($captchakey && !$captchakey.isBlank())
 		<script nonce="$cspNonce" src="https://www.google.com/recaptcha/api.js"></script>
 		<script nonce="$cspNonce">function onSubmit() {document.getElementById("captcha-form").submit();}</script>
+		<script nonce="$cspNonce" type="text/javascript">
+    		window.onload = function() { var $recaptcha = document.querySelector('#g-recaptcha-response');
+				if ($recaptcha) { $recaptcha.setAttribute("required", "true");}};
+		</script>
 		#end
 
 		#if($includeEmojiPicker)
@@ -463,6 +482,7 @@
 		<script nonce="$cspNonce" src="$!scriptslink/picmo-popup.min.js?r=$!rev"></script>
 		<script nonce="$cspNonce" type="module" src="$!scriptslink/emoji-picker.js"></script>
 		#end
+
 
 		#externalScripts(false)
 	</body>
